--- a/css/style.css
+++ b/css/style.css
@@ -16,26 +16,19 @@ body {
 
 @media (max-width: 767.98px) {
   /*...*/
-
   header {
     width: 375px;
     height: 113px;
   }
-
   header img {
     width: 197px;
     height: 36px;
     margin-left: 90px;
     margin-top: 14px;
   }
-  
   .location {
     background-color: #eaeaea;
   }
-
-
-
-
-
-
 }
+
+/*# sourceMappingURL=style.css.map */
