--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body {
   /*...*/
   header {
     width: 375px;
-    height: 113px;
+    height: 63px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 15);
   }
   header img {
     width: 197px;
@@ -27,7 +28,85 @@ body {
     margin-top: 14px;
   }
   .location {
+    display: flex;
+    justify-content:center;
+    width: 375px;
+    height: 50px;
     background-color: #eaeaea;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .location .fas {
+    width: 12px;
+    height: 16px;
+    color: #353535;
+  }
+
+  .location__text {
+    padding: 15px;
+    font-weight: 700;
+  }
+
+  .typography {
+    padding: 30px;
+    text-align: center;
+    font-weight: 700;
+  }
+
+  .typography__title {
+    margin: 0;
+  }
+
+  .typography__subtitle {
+    font-weight: 300;
+  }
+
+  .typography__btn {
+    margin-top: 10px;
+    display: inline-block;
+    width: 218px;
+    height: 50px;
+    font-weight: 500;
+    border-radius: 25px;
+    color: #fff;
+    background: linear-gradient(var(--main-color), var(--second-color));
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .tuto {
+    padding: 20px;
+  }
+
+  .container {
+    margin: auto;
+    position: relative;
+  }
+  div {
+    display: block;
+  }
+
+  .tuto__title {
+    margin-top: 0;
+  }
+  h2 {
+    display: block;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28.13px;
+  }
+
+  .tuto__steps {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  .tuto__step {
+    padding: 19px;
+  }
+
+  .tuto__icon {
+    color: #7e7e7e;
   }
 }
 
