--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,42 +1,75 @@
 /****** General ***********/
 * {
-            font-family: "Roboto", sans-serif;
-          }
-          
-          :root {
-            --main-color: #9856dc;
-            --second-color: #ff79da;
-            --tertiary-color: #99e2d0;
-          }
-          
-          body {
-            margin: 0px;
-            font-family: "Roboto", sans-serif;
-          }
-          
-          @media (max-width: 767.98px) {
-            /*...*/
-          
-            header {
-              width: 375px;
-              height: 113px;
-            }
-          
-            header img {
-              width: 197px;
-              height: 36px;
-              margin-left: 90px;
-              margin-top: 14px;
-            }
-            
-            .location {
-              background-color: #eaeaea;
-            }
-          
-          
-          
-          
-          
-          
+  font-family: "Roboto", sans-serif;
 }
-          
+
+:root {
+  --main-color: #9856dc;
+  --second-color: #ff79da;
+  --tertiary-color: #99e2d0;
+  }
+
+body {
+  margin: 0px;
+  font-family: "Roboto", sans-serif;
+  }
+@media (max-width: 767.98px) {
+  /*...*/
+
+  header {
+    width: 375px;
+    height: 63px;
+  }
+
+  header img {
+    width: 197px;
+    height: 36px;
+    margin-left: 90px;
+    margin-top: 14px;
+  }
+
+  .location {
+    display: flex;
+    justify-content:center;
+    width: 375px;
+    height: 50px;
+    background-color: #eaeaea;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 25);
+  }
+
+  .location .fas {
+    width: 12px;
+    height: 16px;
+    color: #353535;
+  }
+
+  .location_text {
+    padding: 15px;
+    font-weight: 700;
+  }
+
+  .typography {
+    padding: 30px;
+    text-align: center;
+    font-weight: 700;
+  }
+
+  .typography_title {
+    margin: 0;
+  }
+
+  .typography_subtitle {
+    font-weight: 300;
+  }
+
+  .typography_btn {
+    display: inline-block;
+    width: 218px;
+    height: 50px;
+    font-weight: 500;
+    border-radius: 25px;
+    color: #fff;
+    background: linear-gradient(var(--main-color), var(--second-color));
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  }
+}
