--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
   --tertiary-color: #99e2d0;
 }
 
+.fas {
+  font-weight: 900;
+}
+
 body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
@@ -29,6 +33,7 @@ body {
   }
   .location {
     display: flex;
+    align-items: center;
     justify-content:center;
     width: 375px;
     height: 50px;
@@ -40,6 +45,7 @@ body {
     width: 12px;
     height: 16px;
     color: #353535;
+    margin: 15px;
   }
 
   .location__text {
@@ -103,11 +109,74 @@ body {
 
   .tuto__step {
     padding: 19px;
+    display: flex;
+    flex-direction: row;
+    border-radius: 20px;
+    margin: 16 0 16 12;
+    background-color: #f6f6f6 ;
+    box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.15);
+    margin-top: 30px;
   }
 
   .tuto__icon {
+    width: 13px;
+    height: 20px;
     color: #7e7e7e;
   }
+
+  .restaurants {
+    background-color: #f6f6f6;
+    padding: 20px
+  }
+
+  .cards {
+    display: grid;
+    gap: 20px;
+  }
+
+  .card {
+    width: 340px;
+    height: 251px;
+    background-color: #fff;
+    border-radius: 15px;
+    display: block;
+    box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.1);
+  }
+
+  .card__img {
+    width: 100%;
+    height: 190px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    object-fit: cover;
+  }
+
+  .card__badge {
+    background-color: #99e2d0;
+    color: #1b6150;
+    padding: 8px;
+    border-radius: 2px;
+    margin-top: 16px;
+    position: absolute;
+    right: 12px;
+  }
+
+  .card__content {
+    margin-left: 20px;
+  }
+
+  .card__title {
+    left: 13px;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+
+  .card__subtitle {
+    
+
+  }
+
+
 }
 
 /*# sourceMappingURL=style.css.map */
