--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,6 @@
   font-family: "Roboto", sans-serif;
 }
 
-:root {
-  --main-color: #9856dc;
-  --second-color: #ff79da;
-  --tertiary-color: #99e2d0;
-}
-
 .fas {
   font-weight: 900;
 }
@@ -18,165 +12,122 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-@media (max-width: 767.98px) {
-  /*...*/
-  header {
-    width: 375px;
-    height: 63px;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 15);
-  }
-  header img {
-    width: 197px;
-    height: 36px;
-    margin-left: 90px;
-    margin-top: 14px;
-  }
-  .location {
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    width: 375px;
-    height: 50px;
-    background-color: #eaeaea;
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
-  }
+header {
+  width: 375px;
+  height: 63px;
+}
+header img {
+  width: 197px;
+  height: 36px;
+  margin-left: 90px;
+  margin-top: 14px;
+}
 
-  .location .fas {
-    width: 12px;
-    height: 16px;
-    color: #353535;
-    margin: 15px;
-  }
+.typography {
+  padding: 30px;
+  text-align: center;
+  font-weight: 700;
+}
+.typography__title {
+  margin: 0;
+}
+.typography__subtitle {
+  font-weight: 300;
+}
+.typography__btn {
+  display: inline-block;
+  width: 218px;
+  height: 50px;
+  font-weight: 500;
+  border-radius: 25px;
+  color: #fff;
+  background: linear-gradient(#9856dc, #ff79da);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+}
 
-  .location__text {
-    padding: 15px;
-    font-weight: 700;
-  }
+.location {
+  display: flex;
+  justify-content: center;
+  width: 375px;
+  height: 50px;
+  background-color: #eaeaea;
+  box-shadow: 0px 2px 2px 0px rgb(0, 0, 0);
+}
+.location .fa-map-marker-alt {
+  width: 12px;
+  height: 16px;
+  color: #353535;
+}
+.location__text {
+  padding: 15px;
+  font-weight: 700;
+}
 
-  .typography {
-    padding: 30px;
-    text-align: center;
-    font-weight: 700;
-  }
+.tuto {
+  padding: 20px;
+}
+.tuto__title {
+  margin-top: 0;
+}
+.tuto h2 {
+  display: block;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28.13px;
+}
+.tuto__steps {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.tuto__step {
+  padding: 19px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 20px;
+  margin: 16 0 16 12;
+  background-color: #f6f6f6;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  margin-top: 30px;
+}
+.tuto__icon {
+  color: #7e7e7e;
+  margin: 16px;
+}
 
-  .typography__title {
-    margin: 0;
-  }
+.restaurants {
+  background-color: #f6f6f6;
+  padding: 20px;
+}
 
-  .typography__subtitle {
-    font-weight: 300;
-  }
+.cards {
+  display: grid;
+  gap: 20px;
+}
 
-  .typography__btn {
-    margin-top: 10px;
-    display: inline-block;
-    width: 218px;
-    height: 50px;
-    font-weight: 500;
-    border-radius: 25px;
-    color: #fff;
-    background: linear-gradient(var(--main-color), var(--second-color));
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  }
-
-  .tuto {
-    padding: 20px;
-  }
-
-  .container {
-    margin: auto;
-    position: relative;
-  }
-  div {
-    display: block;
-  }
-
-  .tuto__title {
-    margin-top: 0;
-  }
-  h2 {
-    display: block;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 28.13px;
-  }
-
-  .tuto__steps {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-
-  .tuto__step {
-    padding: 19px;
-    display: flex;
-    flex-direction: row;
-    border-radius: 20px;
-    margin: 16 0 16 12;
-    background-color: #f6f6f6 ;
-    box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.15);
-    margin-top: 30px;
-  }
-
-  .tuto__icon {
-    width: 13px;
-    height: 20px;
-    color: #7e7e7e;
-  }
-
-  .restaurants {
-    background-color: #f6f6f6;
-    padding: 20px
-  }
-
-  .cards {
-    display: grid;
-    gap: 20px;
-  }
-
-  .card {
-    width: 340px;
-    height: 251px;
-    background-color: #fff;
-    border-radius: 15px;
-    display: block;
-    box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.1);
-  }
-
-  .card__img {
-    width: 100%;
-    height: 190px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    object-fit: cover;
-  }
-
-  .card__badge {
-    background-color: #99e2d0;
-    color: #1b6150;
-    padding: 8px;
-    border-radius: 2px;
-    margin-top: 16px;
-    position: absolute;
-    right: 12px;
-  }
-
-  .card__content {
-    margin-left: 20px;
-  }
-
-  .card__title {
-    left: 13px;
-    margin-top: 10px;
-    margin-left: 10px;
-  }
-
-  .card__subtitle {
-    
-
-  }
-
-
+.card {
+  width: 100%;
+  height: 251px;
+  background-color: #fff;
+  border-radius: 15px;
+  display: block;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+}
+.card__img {
+  width: 100%;
+  height: 150px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  object-fit: cover;
+}
+.card__badge {
+  background-color: #99e2d0;
+  color: #1b6150;
+  padding: 8px;
+  border-radius: 2px;
+  margin-top: 16px;
+  position: absolute;
+  right: 12px;
 }
 
 /*# sourceMappingURL=style.css.map */
