--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,152 +1,10 @@
-/****** General ***********/
-* {
-  font-family: "Roboto", sans-serif;
-}
+@import "./utils/reset.scss";
+@import "./utils/variables.scss";
 
-:root {
-  --main-color: #9856dc;
-  --second-color: #ff79da;
-  --tertiary-color: #99e2d0;
-}
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
 
-.fas {
-  font-weight: 900;
-}
-
-body {
-  margin: 0px;
-  font-family: "Roboto", sans-serif;
-}
-@media (max-width: 767.98px) {
-  /*...*/
-
-  header {
-    width: 375px;
-    height: 63px;
-  }
-
-  header img {
-    width: 197px;
-    height: 36px;
-    margin-left: 90px;
-    margin-top: 14px;
-  }
-
-  .location {
-    display: flex;
-    justify-content: center;
-    width: 375px;
-    height: 50px;
-    background-color: #eaeaea;
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 25);
-
-    &__location .fas {
-      width: 12px;
-      height: 16px;
-      color: #353535;
-    }
-
-    &__text {
-      padding: 15px;
-      font-weight: 700;
-    }
-  }
-
-  .typography {
-    padding: 30px;
-    text-align: center;
-    font-weight: 700;
-
-    &__title {
-      margin: 0;
-    }
-
-    &__subtitle {
-      font-weight: 300;
-    }
-
-    &__btn {
-      display: inline-block;
-      width: 218px;
-      height: 50px;
-      font-weight: 500;
-      border-radius: 25px;
-      color: #fff;
-      background: linear-gradient(var(--main-color), var(--second-color));
-      box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-    }
-  }
-
-  .tuto {
-    padding: 20px;
-
-    &__title {
-      margin-top: 0;
-    }
-    h2 {
-      display: block;
-      font-weight: 700;
-      font-size: 24px;
-      line-height: 28.13px;
-    }
-
-    &__steps {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-
-    &__step {
-      padding: 19px;
-      display: flex;
-      flex-direction: row;
-      border-radius: 20px;
-      margin: 16 0 16 12;
-      background-color: #f6f6f6 ;
-      box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.15);
-      margin-top: 30px;
-    }
-
-    &__icon {
-      color: #7e7e7e;
-      margin: 16px;
-    }
-  }
-
-  .restaurants {
-    background-color: #f6f6f6;
-    padding: 20px
-  }
-
-  .cards {
-    display: grid;
-    gap: 20px;
-  }
-
-  .card {
-    width: 340px;
-    height: 251px;
-    background-color: #fff;
-    border-radius: 15px;
-    display: block;
-    box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.1);
-  
-
-    &__img {
-    width: 100%;
-    height: 150px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    }
-
-    &__badge {
-    background-color: #99e2d0;
-    color: #1b6150;
-    padding: 8px;
-    border-radius: 2px;
-    margin-top: 16px;
-    position: absolute;
-    right: 12px;
-    }
-  }
-}
+@import "./components/heading.scss";
+@import "./components/location.scss";
+@import "./components/steps.scss";
+@import "./components/home_cards.scss";
