--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,17 @@ body {
 }
 
 header {
-  width: 375px;
+  width: 100%;
   height: 63px;
 }
 header img {
-  width: 197px;
+  width: 80%;
+  display: block;
+  object-fit: contain;
   height: 36px;
-  margin-left: 90px;
+  margin-left: auto;
   margin-top: 14px;
+  margin-right: auto;
 }
 
 .typography {
@@ -48,7 +51,7 @@ header img {
 .location {
   display: flex;
   justify-content: center;
-  width: 375px;
+  width: 100%;
   height: 50px;
   background-color: #eaeaea;
   box-shadow: 0px 2px 2px 0px rgb(0, 0, 0);
@@ -79,6 +82,9 @@ header img {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+.tuto__step__number {
+  background-color: #9856dc;
 }
 .tuto__step {
   padding: 19px;
