--- a/sass/components/location.scss
+++ b/sass/components/location.scss
@@ -1,7 +1,7 @@
 .location {
   display: flex;
   justify-content: center;
-  width: 375px;
+  width: 100%;
   height: 50px;
   background-color: #eaeaea;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 25);
