--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,11 +1,14 @@
 header {
-  width: 375px;
+  width: 100%;
   height: 63px;
 
   img {
-    width: 197px;
+    width: 80%;
+    display: block;
+    object-fit: contain;
     height: 36px;
-    margin-left: 90px;
+    margin-left: auto;
     margin-top: 14px;
+    margin-right: auto;
   }
 }
