--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ header img {
 }
 .typography__btn {
   display: inline-block;
+  align-items: center;
   width: 218px;
   height: 50px;
   font-weight: 500;
@@ -60,6 +61,7 @@ header img {
   width: 12px;
   height: 16px;
   color: #353535;
+  margin-top: 15px;
 }
 .location__text {
   padding: 15px;
@@ -113,11 +115,12 @@ header img {
 
 .card {
   width: 100%;
-  height: 251px;
   background-color: #fff;
+  color: inherit;
   border-radius: 15px;
   display: block;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
 }
 .card__img {
   width: 100%;
@@ -127,13 +130,43 @@ header img {
   object-fit: cover;
 }
 .card__badge {
+  width: 80px;
+  text-align: center;
   background-color: #99e2d0;
   color: #1b6150;
   padding: 8px;
   border-radius: 2px;
-  margin-top: 16px;
+  margin-top: 13px;
   position: absolute;
-  right: 12px;
+  left: 248px;
+  font-size: 14px;
+  font-weight: 500;
+}
+.card__footer {
+  padding: 16px;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.card__title {
+  margin: 0;
+  margin-bottom: 12px;
+}
+.card__btn {
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  border: transparent 0px solid;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.card .fa-heart {
+  width: 22px;
+  height: 21px;
+  color: #101010;
+  border: 1px;
 }
 
 /*# sourceMappingURL=style.css.map */
