--- a/sass/components/home_cards.scss
+++ b/sass/components/home_cards.scss
@@ -10,11 +10,12 @@
 
 .card {
   width: 100%;
-  height: 251px;
   background-color: #fff;
+  color: inherit;
   border-radius: 15px;
   display: block;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
 
   &__img {
     width: 100%;
@@ -25,12 +26,46 @@
   }
 
   &__badge {
+    width: 80px;
+    text-align: center;
     background-color: #99e2d0;
     color: #1b6150;
     padding: 8px;
     border-radius: 2px;
-    margin-top: 16px;
+    margin-top: 13px;
     position: absolute;
-    right: 12px;
+    left: 248px;
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  &__footer {
+    padding: 16px;
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  &__title {
+    margin: 0;
+    margin-bottom: 12px;
+  }
+  
+  &__btn {
+    width: 32px;
+    height: 32px;
+    background-color: transparent;
+    border: transparent 0px solid;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .fa-heart {
+    width: 22px;
+    height: 21px;
+    color: #101010;
+    border: 1px;
   }
 }
