--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,3 +8,4 @@
 @import "./components/location.scss";
 @import "./components/steps.scss";
 @import "./components/home_cards.scss";
+@import "./components/menu.scss";
