--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,9 @@
 }
 
 body {
-  margin: 0px;
+  margin: 0;
   font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
 }
 
 header {
@@ -86,14 +87,20 @@ header img {
   list-style: none;
 }
 .tuto__step__number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
   background-color: #9856dc;
+  border-top: 726px;
+  border-radius: 20px;
+  color: #f6f6f6;
+  margin-left: -30px;
 }
 .tuto__step {
   padding: 19px;
-  display: flex;
-  flex-direction: row;
   border-radius: 20px;
-  margin: 16 0 16 12;
   background-color: #f6f6f6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   margin-top: 30px;
@@ -163,10 +170,101 @@ header img {
   justify-content: center;
 }
 .card .fa-heart {
+  -webkit-text-stroke: 1px black;
   width: 22px;
   height: 21px;
-  color: #101010;
+  color: transparent;
   border: 1px;
+  margin-left: 290px;
+  margin-top: 20px;
+}
+
+header {
+  width: 100%;
+  height: 63px;
+}
+header img {
+  width: 80%;
+  display: block;
+  object-fit: contain;
+  height: 36px;
+  margin-left: auto;
+  margin-top: 14px;
+  margin-right: auto;
+}
+
+.cardimg {
+  width: 100%;
+  object-fit: cover;
+}
+
+.container {
+  width: 100%;
+  margin: auto;
+  position: relative;
+}
+
+.menu {
+  background-color: #f6f6f6;
+  margin-top: -64px;
+  border-radius: 32 32 0 0;
+  position: relative;
+}
+.menu__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu__title {
+  font-family: "Shrikhand" "cursive";
+  font-style: italic;
+  font-size: 28px;
+  font-weight: 400;
+  margin-left: 17px;
+  color: #101010;
+}
+.menu:hover {
+  opacity: 1;
+}
+.menu__heart {
+  background-color: #f6f6f6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  margin-right: 100px;
+}
+.menu__btn {
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu .fa-heart {
+  -webkit-text-stroke: 1px black;
+  width: 22px;
+  height: 21px;
+  color: transparent;
+  border: 1px;
+  left: 312px;
+  margin-top: 20px;
+}
+
+.entermenus {
+  display: grid;
+}
+
+.entermenu {
+  width: 100%;
+  padding: 0 12px;
 }
 
 /*# sourceMappingURL=style.css.map */
