--- a/sass/components/steps.scss
+++ b/sass/components/steps.scss
@@ -18,15 +18,21 @@
   }
 
   &__step__number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
     background-color: $mainColor;
+    border-top: 726px;
+    border-radius: 20px;
+    color: #f6f6f6;
+    margin-left: -30px;
   }
 
   &__step {
     padding: 19px;
-    display: flex;
-    flex-direction: row;
     border-radius: 20px;
-    margin: 16 0 16 12;
     background-color: #f6f6f6;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
     margin-top: 30px;
