--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /****** General ***********/
 * {
-  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 .fas {
@@ -8,9 +9,7 @@
 }
 
 body {
-  margin: 0;
   font-family: "Roboto", sans-serif;
-  scroll-behavior: smooth;
 }
 
 header {
@@ -28,6 +27,7 @@ header img {
 }
 
 .typography {
+  background-color: #f6f6f6;
   padding: 30px;
   text-align: center;
   font-weight: 700;
@@ -37,12 +37,11 @@ header img {
 }
 .typography__subtitle {
   font-weight: 300;
+  margin-bottom: 40px;
 }
-.typography__btn {
-  display: inline-block;
-  align-items: center;
-  width: 218px;
-  height: 50px;
+
+.button {
+  padding: 17px 20px;
   font-weight: 500;
   border-radius: 25px;
   color: #fff;
@@ -51,12 +50,12 @@ header img {
 }
 
 .location {
+  box-shadow: 0px 2px 2px 0px rgb(0, 0, 0);
   display: flex;
   justify-content: center;
   width: 100%;
   height: 50px;
   background-color: #eaeaea;
-  box-shadow: 0px 2px 2px 0px rgb(0, 0, 0);
 }
 .location .fa-map-marker-alt {
   width: 12px;
@@ -82,11 +81,13 @@ header img {
   line-height: 28.13px;
 }
 .tuto__steps {
+  display: grid;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 .tuto__step__number {
+  top: 531.86px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -96,10 +97,10 @@ header img {
   border-top: 726px;
   border-radius: 20px;
   color: #f6f6f6;
-  margin-left: -30px;
 }
 .tuto__step {
-  padding: 19px;
+  padding: 10px 20px;
+  display: flex;
   border-radius: 20px;
   background-color: #f6f6f6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
@@ -193,30 +194,35 @@ header img {
   margin-right: auto;
 }
 
+.fa-arrow-left {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+}
+
 .cardimg {
   width: 100%;
   object-fit: cover;
 }
 
-.container {
-  width: 100%;
-  margin: auto;
-  position: relative;
-}
-
 .menu {
+  width: 100%;
+  border-radius: 40px 40px 0px 0px;
   background-color: #f6f6f6;
-  margin-top: -64px;
-  border-radius: 32 32 0 0;
+  margin-top: -54px;
   position: relative;
 }
 .menu__header {
-  display: flex;
+  margin-bottom: 64px;
+  display: grid;
+  grid-template-columns: auto auto;
   align-items: center;
-  justify-content: space-between;
 }
 .menu__title {
-  font-family: "Shrikhand" "cursive";
+  font-family: "Shrikhand", "cursive";
   font-style: italic;
   font-size: 28px;
   font-weight: 400;
@@ -229,8 +235,6 @@ header img {
 .menu__heart {
   background-color: #f6f6f6;
   position: absolute;
-  top: 0;
-  left: 0;
   height: 100%;
   width: 100%;
   display: flex;
@@ -254,17 +258,17 @@ header img {
   height: 21px;
   color: transparent;
   border: 1px;
-  left: 312px;
   margin-top: 20px;
 }
 
-.entermenus {
-  display: grid;
+.menu__enter {
+  display: flex;
+  flex-direction: column;
 }
-
-.entermenu {
-  width: 100%;
-  padding: 0 12px;
+.menu__enter h2 {
+  width: 40px;
+  height: 3px;
+  background-color: #99e2d0;
 }
 
 /*# sourceMappingURL=style.css.map */
