--- a/sass/components/heading.scss
+++ b/sass/components/heading.scss
@@ -1,4 +1,5 @@
 .typography {
+  background-color: #f6f6f6;
   padding: 30px;
   text-align: center;
   font-weight: 700;
@@ -9,17 +10,16 @@
 
   &__subtitle {
     font-weight: 300;
+    margin-bottom: 40px;
   }
 
-  &__btn {
-    display: inline-block;
-    align-items:center;
-    width: 218px;
-    height: 50px;
-    font-weight: 500;
-    border-radius: 25px;
-    color: #fff;
-    background: linear-gradient($mainColor, $secondColor);
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  }
+}
+
+.button {
+  padding: 17px 20px;
+  font-weight: 500;
+  border-radius: 25px;
+  color: #fff;
+  background: linear-gradient($mainColor, $secondColor);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
