--- a/sass/components/steps.scss
+++ b/sass/components/steps.scss
@@ -12,12 +12,14 @@
   }
 
   &__steps {
+    display: grid;
     margin: 0;
     padding: 0;
     list-style: none;
   }
 
   &__step__number {
+    top: 531.86px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,11 +29,11 @@
     border-top: 726px;
     border-radius: 20px;
     color: #f6f6f6;
-    margin-left: -30px;
   }
 
   &__step {
-    padding: 19px;
+    padding: 10px 20px;
+    display: flex;
     border-radius: 20px;
     background-color: #f6f6f6;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
