--- a/sass/utils/reset.scss
+++ b/sass/utils/reset.scss
@@ -1,6 +1,7 @@
 /****** General ***********/
 * {
-  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 
@@ -10,7 +11,5 @@
 }
 
 body {
-  margin: 0;
   font-family: "Roboto", sans-serif;
-  scroll-behavior: smooth;
 }
