--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ header img {
 .tuto__step {
   padding: 10px 20px;
   display: flex;
+  align-items: center;
   border-radius: 20px;
   background-color: #f6f6f6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
