--- a/sass/components/steps.scss
+++ b/sass/components/steps.scss
@@ -29,10 +29,11 @@
     border-top: 726px;
     border-radius: 20px;
     color: #f6f6f6;
+    margin-left: -12px;
   }
 
   &__step {
-    padding: 10px 20px;
+    padding: 10px 20px 10px 0px;
     display: flex;
     align-items: center;
     border-radius: 20px;
