--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,6 +1,8 @@
 header {
   width: 100%;
   height: 63px;
+  display: flex;
+  align-items: center;
 
   img {
     width: 80%;
@@ -10,5 +12,6 @@ header {
     margin-left: auto;
     margin-top: 14px;
     margin-right: auto;
+    margin-bottom: 14px;
   }
 }
