--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,3 +9,5 @@
 @import "./components/steps.scss";
 @import "./components/home_cards.scss";
 @import "./components/menu.scss";
+@import "./components/heart.scss";
+@import "./components/check.scss";
