--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,3 +11,4 @@
 @import "./components/menu.scss";
 @import "./components/heart.scss";
 @import "./components/check.scss";
+@import "./components/bouton.scss";
