--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,29 @@ header img {
   margin-bottom: 14px;
 }
 
+.footer {
+  width: 100%;
+  background-color: #353535;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 20px;
+  gap: 16px;
+}
+.footer__title {
+  color: #fff;
+  font-family: "Shrikhand", "cursive";
+  font-style: italic;
+  font-size: 18px;
+}
+
+.footer__link {
+  align-items: center;
+  display: flex;
+  color: #fff;
+  gap: 8px;
+  margin: 10px;
+}
+
 .typography {
   background-color: #f6f6f6;
   padding: 30px;
@@ -37,6 +60,7 @@ header img {
 }
 .typography__title {
   margin: 0;
+  padding: 20px;
 }
 .typography__subtitle {
   font-weight: 300;
@@ -205,7 +229,7 @@ header a {
   padding: 20px;
 }
 .menu__header {
-  margin-bottom: 64px;
+  margin-bottom: 20px;
   display: grid;
   grid-template-columns: auto auto;
   align-items: center;
@@ -258,7 +282,8 @@ header a {
 .menu__list {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  margin-bottom: 20px;
+  gap: 12px;
 }
 
 .menu__title__h2 {
@@ -267,6 +292,7 @@ header a {
   width: 40px;
   height: 3px;
   background-color: #99e2d0;
+  margin-bottom: 20px;
 }
 
 .enter__item {
@@ -276,10 +302,9 @@ header a {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .enter__item .enter__info {
-  padding: 24px;
+  padding: 15px;
   width: 100%;
   display: flex;
-  gap: 16px;
 }
 .enter__item__content {
   font-weight: 500;
@@ -296,6 +321,66 @@ header a {
   font-family: "Roboto", sans-serif;
 }
 .enter__item__price {
+  font-weight: 700;
+  display: flex;
+}
+
+.flat__item {
+  background-color: #fff;
+  border-radius: 15px;
+  display: flex;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.flat__item .flat__info {
+  padding: 15px;
+  width: 100%;
+  display: flex;
+}
+.flat__item__content {
+  font-weight: 500;
+  font-size: 18px;
+}
+.flat__item__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.flat__item__detail {
+  font-weight: 300;
+  font-size: 15.04px;
+  font-family: "Roboto", sans-serif;
+}
+.flat__item__price {
+  font-weight: 700;
+  display: flex;
+}
+
+.desserts__item {
+  background-color: #fff;
+  border-radius: 15px;
+  display: flex;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.desserts__item .desserts__info {
+  padding: 15px;
+  width: 100%;
+  display: flex;
+}
+.desserts__item__content {
+  font-weight: 500;
+  font-size: 18px;
+}
+.desserts__item__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.desserts__item__detail {
+  font-weight: 300;
+  font-size: 15.04px;
+  font-family: "Roboto", sans-serif;
+}
+.desserts__item__price {
   font-weight: 700;
   display: flex;
 }
@@ -337,11 +422,27 @@ header a {
 .check {
   width: 0;
   opacity: 0;
+  background-color: #99e2d0;
+  margin: -16px -80px -16px -16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 0.5s;
 }
 
 .enter__info:hover .check {
   opacity: 1;
   width: 30%;
+}
+
+.button {
+  padding: 17px 20px;
+  font-weight: 500;
+  border-radius: 25px;
+  color: #fff;
+  background: linear-gradient(#9856dc, #ff79da);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
