--- a/sass/components/check.scss
+++ b/sass/components/check.scss
@@ -3,6 +3,7 @@
   opacity: 0;
   background-color: $tertiaryColor;
   margin: -16px -80px -16px -16px;
+  flex-direction: column;
   display: flex;
   align-items: center;
   justify-content: center;
