--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -24,6 +24,14 @@ header {
   color: #000;
 }
 
+.header__arrow {
+  position: absolute;
+  left: 25px;
+  top: 25px;
+}
+
+
+
 .cardimg {
   width: 100%;
   object-fit: cover;
@@ -48,7 +56,6 @@ header {
     font-style: italic;
     font-size: 28px;
     font-weight: 400;
-    margin-left: 17px;
     color: #101010;
   }
 
@@ -90,7 +97,6 @@ header {
 
 .menu__enter {
   display: grid;
-  gap: 64px;
 }
 
 .menu__list {
@@ -107,6 +113,8 @@ header {
   height: 3px;
   background-color: $tertiaryColor;
   margin-bottom: 20px;
+  font-weight: 300;
+  size: 16px;
 }
 
 .enter__item {
