--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,9 @@ header a {
   position: relative;
   padding: 20px;
 }
+.menu__all {
+  margin-top: 30px;
+}
 .menu__header {
   margin-bottom: 20px;
   display: grid;
@@ -276,29 +279,24 @@ header a {
   height: 21px;
   color: transparent;
   border: 1px;
-  margin-top: 20px;
-}
-
-.menu__enter {
-  display: grid;
 }
 
 .menu__list {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
-  gap: 12px;
+  gap: 15px;
 }
 
 .menu__title__h2 {
   display: flex;
-  flex-direction: column;
   width: 40px;
   height: 3px;
   background-color: #99e2d0;
-  margin-bottom: 20px;
   font-weight: 300;
-  size: 16px;
+  flex-direction: column-reverse;
+  font-weight: 300;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
 }
 
 .enter__item {
@@ -311,6 +309,8 @@ header a {
   padding: 15px;
   width: 100%;
   display: flex;
+  flex: 1;
+  justify-content: space-between;
 }
 .enter__item__content {
   font-weight: 500;
@@ -329,6 +329,7 @@ header a {
 .enter__item__price {
   font-weight: 700;
   display: flex;
+  align-items: flex-end;
 }
 
 .flat__item {
@@ -397,9 +398,6 @@ header a {
   background-color: transparent;
   border: transparent 0px solid;
   padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
 }
 
@@ -411,12 +409,15 @@ header a {
   left: 0;
   right: 0;
   bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .empty__heart:hover {
   display: none;
 }
 .empty__heart:hover .full__heart {
-  display: block;
+  background: linear-gradient(#ff79da, #9856dc);
 }
 
 .full__heart {
@@ -428,17 +429,27 @@ header a {
 .check {
   width: 0;
   opacity: 0;
-  background-color: #99e2d0;
-  margin: -16px -80px -16px -16px;
+  background: #99e2d0;
   flex-direction: column;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
   border-radius: 0 15px 15px 0;
+  transition: all 400ms ease-in-out;
 }
 
 .enter__info:hover .check {
+  opacity: 1;
+  width: 30%;
+}
+
+.flat__info:hover .check {
+  opacity: 1;
+  width: 30%;
+}
+
+.desserts__info:hover .check {
   opacity: 1;
   width: 30%;
 }
