--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -44,6 +44,10 @@ header {
   position: relative;
   padding: 20px;
 
+  &__all {
+    margin-top: 30px;
+  }
+
   &__header {
     margin-bottom: 20px;
     display: grid;
@@ -91,30 +95,25 @@ header {
     height: 21px;
     color: transparent;
     border: 1px;
-    margin-top: 20px;
   }
-}
-
-.menu__enter {
-  display: grid;
 }
 
 .menu__list {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
-  gap: 12px;
+  gap: 15px;
 }
 
 .menu__title__h2 {
   display: flex;
-  flex-direction: column;
   width: 40px;
   height: 3px;
   background-color: $tertiaryColor;
-  margin-bottom: 20px;
   font-weight: 300;
-  size: 16px;
+  flex-direction: column-reverse;
+  font-weight: 300;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
 }
 
 .enter__item {
@@ -127,6 +126,8 @@ header {
     padding: 15px;
     width: 100%;
     display: flex;
+    flex: 1;
+    justify-content: space-between;
   }
 
   &__content {
@@ -149,6 +150,7 @@ header {
   &__price {
     font-weight: 700;
     display: flex;
+    align-items: flex-end;
   }
 }
 
