--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,19 @@ header img {
   margin-bottom: 14px;
 }
 
+.fa-arrow-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+}
+
+.header__arrow {
+  position: absolute;
+  left: 25px;
+  top: 25px;
+}
+
 .footer {
   width: 100%;
   background-color: #353535;
@@ -184,42 +197,13 @@ header img {
 .card__footer {
   padding: 16px;
   position: relative;
-  display: flex;
   justify-content: space-between;
+  display: flex;
+  align-items: center;
 }
 .card__title {
   margin: 0;
   margin-bottom: 12px;
-}
-
-header {
-  width: 100%;
-  height: 63px;
-}
-header img {
-  width: 80%;
-  display: block;
-  object-fit: contain;
-  height: 36px;
-  margin-left: auto;
-  margin-top: 14px;
-  margin-right: auto;
-}
-header a {
-  text-decoration: none;
-}
-
-.fa-arrow-left {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #000;
-}
-
-.header__arrow {
-  position: absolute;
-  left: 25px;
-  top: 25px;
 }
 
 .cardimg {
@@ -227,109 +211,44 @@ header a {
   object-fit: cover;
 }
 
-.menu {
-  border-radius: 40px 40px 0px 0px;
-  background-color: #f6f6f6;
-  margin-top: -40px;
-  position: relative;
-  padding: 20px;
-}
-.menu__all {
-  margin-top: 30px;
-}
-.menu__header {
-  margin-bottom: 20px;
-  display: grid;
-  grid-template-columns: auto auto;
-  align-items: center;
-}
-.menu__title {
-  font-family: "Shrikhand", "cursive";
-  font-style: italic;
-  font-size: 28px;
-  font-weight: 400;
-  color: #101010;
-}
-.menu:hover {
-  opacity: 1;
-}
-.menu__heart {
-  background-color: #f6f6f6;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
-  margin-right: 100px;
-}
-.menu__btn {
-  width: 32px;
-  height: 32px;
-  background-color: transparent;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.menu .fa-heart {
-  -webkit-text-stroke: 1px black;
-  width: 22px;
-  height: 21px;
-  color: transparent;
-  border: 1px;
-}
-
-.menu__list {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.menu__title__h2 {
-  display: flex;
-  width: 40px;
-  height: 3px;
-  background-color: #99e2d0;
-  font-weight: 300;
-  flex-direction: column-reverse;
-  font-weight: 300;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-}
-
 .enter__item {
   background-color: #fff;
   border-radius: 15px;
-  display: flex;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .enter__item .enter__info {
-  padding: 15px;
   width: 100%;
   display: flex;
-  flex: 1;
   justify-content: space-between;
 }
 .enter__item__content {
   font-weight: 500;
   font-size: 18px;
 }
-.enter__item__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.enter__item .enter__text {
+  width: 80%;
+  padding: 15px 0 15px 15px;
+  text-overflow: ellipsis;
+  word-break: break-word;
+  overflow: hidden;
+}
+.enter__item .enter__text h3, .enter__item .enter__text p {
+  text-overflow: ellipsis;
+  word-break: break-word;
+  overflow: hidden;
 }
 .enter__item__detail {
   font-weight: 300;
   font-size: 15.04px;
   font-family: "Roboto", sans-serif;
 }
-.enter__item__price {
+.enter__item .enter__price {
   font-weight: 700;
   display: flex;
   align-items: flex-end;
+  width: 20%;
+  justify-content: flex-end;
+  padding-right: 10px;
 }
 
 .flat__item {
@@ -400,6 +319,13 @@ header a {
   padding: 0;
   position: relative;
 }
+.card__heart:hover .empty__heart {
+  display: none;
+}
+.card__heart:hover .full__heart {
+  transform: scale(1.3);
+  opacity: 1;
+}
 
 .empty__heart {
   width: 32px;
@@ -409,21 +335,17 @@ header a {
   left: 0;
   right: 0;
   bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.empty__heart:hover {
-  display: none;
-}
-.empty__heart:hover .full__heart {
-  background: linear-gradient(#ff79da, #9856dc);
 }
 
 .full__heart {
   width: 32px;
   height: 32px;
-  display: none;
+  color: transparent;
+  background-image: linear-gradient(#ff79da, #9856dc);
+  background-clip: text;
+  transform: scale(1);
+  opacity: 0;
+  transition: all 600ms ease-in-out;
 }
 
 .check {
@@ -442,6 +364,9 @@ header a {
 .enter__info:hover .check {
   opacity: 1;
   width: 30%;
+}
+.enter__info:hover .enter__text {
+  width: 50%;
 }
 
 .flat__info:hover .check {
@@ -467,6 +392,85 @@ header a {
   color: #fff;
   background: linear-gradient(#ff79da, #9856dc);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+.menu {
+  border-radius: 40px 40px 0px 0px;
+  background-color: #f6f6f6;
+  margin-top: -40px;
+  position: relative;
+  padding: 20px;
+}
+.menu__all {
+  margin-top: 30px;
+}
+.menu__header {
+  margin-bottom: 20px;
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+}
+.menu__title {
+  font-family: "Shrikhand", "cursive";
+  font-style: italic;
+  font-size: 28px;
+  font-weight: 400;
+  color: #101010;
+}
+.menu:hover {
+  opacity: 1;
+}
+.menu__heart {
+  background-color: #f6f6f6;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  margin-right: 100px;
+}
+.menu__btn {
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu .fa-heart {
+  -webkit-text-stroke: 1px black;
+  width: 22px;
+  height: 21px;
+  color: transparent;
+  border: 1px;
+}
+
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.menu__title__h2 {
+  display: flex;
+  font-weight: 300;
+  flex-direction: column-reverse;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  position: relative;
+}
+
+.menu__title__h2::after {
+  content: "";
+  width: 10%;
+  background-color: #99e2d0;
+  height: 3px;
+  bottom: 0;
+  position: absolute;
+  margin-bottom: -5px;
 }
 
 /*# sourceMappingURL=style.css.map */
