--- a/sass/components/heart.scss
+++ b/sass/components/heart.scss
@@ -5,6 +5,17 @@
   border: transparent 0px solid;
   padding: 0;
   position: relative;
+  &:hover {
+    .empty__heart {
+      display: none;
+    }
+    
+    .full__heart {
+      transform: scale(1.3);
+      // display: block;
+      opacity: 1;
+    }
+  }
 }
 
 .empty__heart {
@@ -15,20 +26,19 @@
   left: 0;
   right: 0;
   bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+ 
 
-  &:hover {
-    display: none;
-    .full__heart {
-      background: linear-gradient($secondColor, $mainColor);
-    }
-  }
+  
 }
 
 .full__heart {
   width: 32px;
   height: 32px;
-  display: none;
+  // display: none;
+  color: transparent;
+  background-image: linear-gradient($secondColor, $mainColor);
+  background-clip: text;
+  transform: scale(1);
+  opacity: 0;
+  transition: all 600ms ease-in-out;
 }
