--- a/sass/components/home_cards.scss
+++ b/sass/components/home_cards.scss
@@ -44,8 +44,9 @@
   &__footer {
     padding: 16px;
     position: relative;
-    display: flex;
     justify-content: space-between;
+    display: flex;
+    align-items: center;
   }
 
   &__title {
