--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -1,132 +1,19 @@
-header {
-  width: 100%;
-  height: 63px;
-
-  img {
-    width: 80%;
-    display: block;
-    object-fit: contain;
-    height: 36px;
-    margin-left: auto;
-    margin-top: 14px;
-    margin-right: auto;
-  }
-
-  a {
-    text-decoration: none;
-  }
-}
-
-.fa-arrow-left {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #000;
-}
-
-.header__arrow {
-  position: absolute;
-  left: 25px;
-  top: 25px;
-}
-
-
-
 .cardimg {
   width: 100%;
   object-fit: cover;
 }
 
-.menu {
-  border-radius: 40px 40px 0px 0px;
-  background-color: #f6f6f6;
-  margin-top: -40px;
-  position: relative;
-  padding: 20px;
 
-  &__all {
-    margin-top: 30px;
-  }
-
-  &__header {
-    margin-bottom: 20px;
-    display: grid;
-    grid-template-columns: auto auto;
-    align-items: center;
-  }
-
-  &__title {
-    font-family: "Shrikhand", "cursive";
-    font-style: italic;
-    font-size: 28px;
-    font-weight: 400;
-    color: #101010;
-  }
-
-  &:hover {
-    opacity: 1;
-  }
-
-  &__heart {
-    background-color: #f6f6f6;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    margin-right: 100px;
-  }
-
-  &__btn {
-    width: 32px;
-    height: 32px;
-    background-color: transparent;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .fa-heart {
-    -webkit-text-stroke: 1px black;
-    width: 22px;
-    height: 21px;
-    color: transparent;
-    border: 1px;
-  }
-}
-
-.menu__list {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.menu__title__h2 {
-  display: flex;
-  width: 40px;
-  height: 3px;
-  background-color: $tertiaryColor;
-  font-weight: 300;
-  flex-direction: column-reverse;
-  font-weight: 300;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-}
 
 .enter__item {
   background-color: #fff;
   border-radius: 15px;
-  display: flex;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
 .enter__info {
-    padding: 15px;
+    // padding: 15px;
     width: 100%;
     display: flex;
-    flex: 1;
     justify-content: space-between;
   }
 
@@ -135,10 +22,20 @@ header {
       font-size: 18px;
   }
 
-  &__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  .enter__text {
+    width: 80%;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+    padding: 15px 0 15px 15px;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    overflow: hidden;
+    h3, p {
+      text-overflow: ellipsis;
+      word-break: break-word;
+      overflow: hidden;
+    }
   }
 
   &__detail {
@@ -147,10 +44,13 @@ header {
     font-family: "Roboto", sans-serif;
   }
 
-  &__price {
+  .enter__price {
     font-weight: 700;
     display: flex;
     align-items: flex-end;
+    width: 20%;
+    justify-content: flex-end;
+    padding-right: 10px;
   }
 }
 
