--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -15,3 +15,16 @@ header {
     margin-bottom: 14px;
   }
 }
+
+.fa-arrow-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+}
+
+.header__arrow {
+  position: absolute;
+  left: 25px;
+  top: 25px;
+}
