--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,3 +12,4 @@
 @import "./components/heart.scss";
 @import "./components/check.scss";
 @import "./components/btn.scss";
+@import "./components/menu_cards.scss";
