--- a/sass/components/menu_cards.scss
+++ b/sass/components/menu_cards.scss
@@ -83,3 +83,18 @@
   position: absolute;
   margin-bottom: -5px;
 }
+
+@media screen and (min-width: 768px) {
+            
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 1440px) {
+
+
+}
