--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,3 +13,6 @@
 @import "./components/check.scss";
 @import "./components/btn.scss";
 @import "./components/menu_cards.scss";
+@import "./components/loader.scss";
+@import "./components/flat.scss";
+@import "./components/desserts.scss";
