--- a/sass/components/heading.scss
+++ b/sass/components/heading.scss
@@ -1,6 +1,6 @@
 .typography {
   background-color: #f6f6f6;
-  padding: 30px;
+  padding: 40px 30px 70px;
   text-align: center;
   font-weight: 700;
 
@@ -23,4 +23,13 @@
   color: #fff;
   background: linear-gradient($mainColor, $secondColor);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+@media screen and (max-width: 1440px) {
+  .typography {
+    &__title {
+      font-weight: 700;
+      font-size: 40px;
+    }
+  }
 }
