--- a/sass/components/home_cards.scss
+++ b/sass/components/home_cards.scss
@@ -1,11 +1,11 @@
 .restaurants {
   background-color: #f6f6f6;
-  padding: 20px;
 }
 
 .cards {
   display: grid;
   gap: 20px;
+  padding: 25px 0 0;
 }
 
 .card {
@@ -20,9 +20,8 @@
 
   &__img {
     width: 100%;
-    height: 150px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
+    height: 250px;
+    border-radius: 15px 15px 0 0;
     object-fit: cover;
   }
 
@@ -35,8 +34,8 @@
     border-radius: 2px;
     margin-top: 13px;
     position: absolute;
-    right: 5%;
-    top: 5%;
+    right: 3%;
+    top: 1%;
     font-size: 14px;
     font-weight: 500;
   }
@@ -47,12 +46,11 @@
     justify-content: space-between;
     display: flex;
     align-items: center;
+    padding: 20px 40px 20px 15px;
   }
 
   &__title {
     margin: 0;
     margin-bottom: 12px;
   }
-  
-  
 }
