--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-section {
-  padding: 50px 20px;
+.content {
+  max-width: 1440px;
+  margin: auto;
 }
 
 header {
@@ -66,7 +67,15 @@ header img {
   display: flex;
   color: #fff;
   gap: 8px;
-  margin: 10px;
+  margin: 0;
+}
+
+i {
+  margin: 0;
+}
+
+h4 {
+  margin: 3px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -105,14 +114,8 @@ header img {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
-@media screen and (max-width: 1440px) {
-  .typography__title {
-    font-weight: 700;
-    font-size: 40px;
-  }
-}
 .location {
-  box-shadow: 0px 2px 2px 0px rgb(0, 0, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: center;
   width: 100%;
@@ -131,6 +134,9 @@ header img {
   font-weight: 700;
 }
 
+.tuto {
+  padding: 20px;
+}
 .tuto__title {
   margin-top: 0;
 }
@@ -187,11 +193,15 @@ header img {
 .restaurants {
   background-color: #f6f6f6;
 }
+.restaurants h2 {
+  padding: 20px;
+}
 
 .cards {
   display: grid;
   gap: 20px;
-  padding: 25px 0 0;
+  padding: 15px 0 0;
+  margin: 0 20px 20px 20px;
 }
 
 .card {
@@ -206,7 +216,7 @@ header img {
 }
 .card__img {
   width: 100%;
-  height: 250px;
+  height: 150px;
   border-radius: 15px 15px 0 0;
   object-fit: cover;
 }
@@ -246,9 +256,9 @@ header img {
   background-color: #fff;
   border-radius: 15px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  width: 100%;
 }
 .enter__item .enter__info {
-  width: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -372,10 +382,7 @@ header img {
   background-color: #f6f6f6;
   margin-top: -40px;
   position: relative;
-  padding: 20px;
-}
-.menu__all {
-  margin-top: 30px;
+  padding-bottom: 20px;
 }
 .menu__header {
   margin-bottom: 20px;
@@ -389,6 +396,7 @@ header img {
   font-size: 28px;
   font-weight: 400;
   color: #101010;
+  padding: 20px;
 }
 .menu:hover {
   opacity: 1;
@@ -425,6 +433,7 @@ header img {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  padding: 20px;
 }
 
 .menu__title__h2 {
@@ -446,6 +455,13 @@ header img {
   margin-bottom: -5px;
 }
 
+@media screen and (min-width: 768px) {
+  .cardimg {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+  }
+}
 .flat__item {
   background-color: #fff;
   border-radius: 15px;
