--- a/sass/components/home_cards.scss
+++ b/sass/components/home_cards.scss
@@ -1,11 +1,17 @@
 .restaurants {
   background-color: #f6f6f6;
+  
+  h2 {
+    padding: 20px;
+  } 
+  
 }
 
 .cards {
   display: grid;
   gap: 20px;
-  padding: 25px 0 0;
+  padding: 15px 0 0;
+  margin: 0 20px 20px 20px;
 }
 
 .card {
@@ -20,7 +26,7 @@
 
   &__img {
     width: 100%;
-    height: 250px;
+    height: 150px;
     border-radius: 15px 15px 0 0;
     object-fit: cover;
   }
