--- a/sass/components/location.scss
+++ b/sass/components/location.scss
@@ -1,5 +1,5 @@
 .location {
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 25);
+  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
   display: flex;
   justify-content: center;
   width: 100%;
