--- a/sass/components/menu_cards.scss
+++ b/sass/components/menu_cards.scss
@@ -3,11 +3,7 @@
   background-color: #f6f6f6;
   margin-top: -40px;
   position: relative;
-  padding: 20px;
-
-  &__all {
-    margin-top: 30px;
-  }
+  padding-bottom: 20px;
 
   &__header {
     margin-bottom: 20px;
@@ -22,6 +18,7 @@
     font-size: 28px;
     font-weight: 400;
     color: #101010;
+    padding: 20px;
   }
 
   &:hover {
@@ -63,6 +60,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  padding: 20px;
 }
 
 .menu__title__h2 {
@@ -85,6 +83,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .cardimg {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+  }
             
 }
 
@@ -94,6 +97,6 @@
 
 
 
-@media screen and (min-width: 1024px) {
-
+@media screen and (max-width: 1440px) {
+  
 }
