--- a/sass/utils/reset.scss
+++ b/sass/utils/reset.scss
@@ -14,6 +14,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-section {
-  padding: 50px 20px;
+.content {
+  max-width: 1440px;
+  margin: auto;
 }
