--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ header {
   height: 63px;
   display: flex;
   align-items: center;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 999;
 }
 header img {
   width: 80%;
@@ -74,20 +77,25 @@ i {
   margin: 0;
 }
 
-h4 {
+h2 {
   margin: 3px;
 }
 
-@media screen and (min-width: 1024px) {
+.fa-handshake-angle {
+  font-size: 12px;
+}
+
+@media screen and (min-width: 768px) {
   .footer {
     align-items: center;
     justify-content: center;
     flex-direction: row-reverse;
     gap: 7px;
   }
-  nav {
+  .footer nav {
     display: flex;
     flex-direction: row;
+    gap: 10px;
   }
 }
 .typography {
@@ -122,6 +130,8 @@ h4 {
   height: 50px;
   background-color: #eaeaea;
   padding: 0;
+  z-index: 99;
+  position: relative;
 }
 .location .fa-map-marker-alt {
   width: 12px;
@@ -179,15 +189,34 @@ h4 {
   margin: 16px;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .tuto__steps {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 30px;
+    flex-wrap: wrap;
   }
   .tuto__step {
-    width: 100%;
+    width: 48%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .tuto h2 {
+    width: 82%;
+    margin: 0 auto;
+  }
+  .tuto__steps {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 30px;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: 0 auto;
+  }
+  .tuto__step {
+    width: 28%;
   }
 }
 .restaurants {
@@ -198,7 +227,8 @@ h4 {
 }
 
 .cards {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   padding: 15px 0 0;
   margin: 0 20px 20px 20px;
@@ -247,6 +277,23 @@ h4 {
   margin-bottom: 12px;
 }
 
+@media screen and (min-width: 768px) {
+  .cards .card {
+    width: 48%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .cards {
+    width: 80%;
+    margin: 20px auto 0 auto;
+    padding-bottom: 20px;
+  }
+  .restaurants h2 {
+    width: 80%;
+    margin: 0 auto;
+    padding-left: 0;
+  }
+}
 .cardimg {
   width: 100%;
   object-fit: cover;
@@ -299,6 +346,7 @@ h4 {
   height: 32px;
   background-color: transparent;
   border: transparent 0px solid;
+  font-size: 22px;
   padding: 0;
   position: relative;
 }
@@ -401,17 +449,6 @@ h4 {
 .menu:hover {
   opacity: 1;
 }
-.menu__heart {
-  background-color: #f6f6f6;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
-  margin-right: 100px;
-}
 .menu__btn {
   width: 32px;
   height: 32px;
@@ -420,13 +457,6 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.menu .fa-heart {
-  -webkit-text-stroke: 1px black;
-  width: 22px;
-  height: 21px;
-  color: transparent;
-  border: 1px;
 }
 
 .menu__list {
