--- a/sass/components/heart.scss
+++ b/sass/components/heart.scss
@@ -3,6 +3,7 @@
   height: 32px;
   background-color: transparent;
   border: transparent 0px solid;
+  font-size: 22px;
   padding: 0;
   position: relative;
   &:hover {
@@ -12,7 +13,6 @@
     
     .full__heart {
       transform: scale(1.3);
-      // display: block;
       opacity: 1;
     }
   }
@@ -34,7 +34,6 @@
 .full__heart {
   width: 32px;
   height: 32px;
-  // display: none;
   color: transparent;
   background-image: linear-gradient($secondColor, $mainColor);
   background-clip: text;
