--- a/sass/components/home_cards.scss
+++ b/sass/components/home_cards.scss
@@ -8,7 +8,8 @@
 }
 
 .cards {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   padding: 15px 0 0;
   margin: 0 20px 20px 20px;
@@ -58,5 +59,29 @@
   &__title {
     margin: 0;
     margin-bottom: 12px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .cards {
+    .card {
+      width: 48%;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cards {
+    width: 80%;
+    margin: 20px auto 0 auto;
+    padding-bottom: 20px;
+  }
+
+  .restaurants {
+    h2 {
+      width: 80%;
+      margin: 0 auto;
+      padding-left: 0;
+    }
   }
 }
