--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -3,6 +3,9 @@ header {
   height: 63px;
   display: flex;
   align-items: center;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.25);
+  position: relative;
+  z-index: 999;
 
   img {
     width: 80%;
