--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,3 +16,4 @@
 @import "./components/loader.scss";
 @import "./components/flat.scss";
 @import "./components/desserts.scss";
+@import "./components/menu-animation.scss";
