--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -1,3 +1,5 @@
 $mainColor:#9856dc;
+$lightMainColor: lighten(#9856dc, 5%);
 $secondColor: #ff79da;
+$lightSecondColor: lighten(#ff79da, 5%);
 $tertiaryColor: #99e2d0;
