--- a/sass/components/btn.scss
+++ b/sass/components/btn.scss
@@ -11,5 +11,9 @@
     color: #fff;
     background: linear-gradient($secondColor, $mainColor);
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+    &:hover {
+      background: linear-gradient($lightSecondColor , $lightMainColor);
+      box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.40);
+    }
   }
 }
