--- a/sass/components/heading.scss
+++ b/sass/components/heading.scss
@@ -21,9 +21,13 @@
   font-weight: 500;
   border-radius: 25px;
   color: #fff;
-  background: linear-gradient($mainColor, $secondColor);
+  background: linear-gradient($secondColor , $mainColor);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
 
+  &:hover {
+    background: linear-gradient($lightSecondColor , $lightMainColor);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.40);
+  }
   
 }
 
