--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -8,6 +8,8 @@
   border-radius: 15px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   width: 100%;
+  animation: slide-to-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) forwards;
+  opacity: 0;
 
 .enter__info {
     display: flex;
