--- a/sass/components/menu_cards.scss
+++ b/sass/components/menu_cards.scss
@@ -7,9 +7,9 @@
 
   &__header {
     margin-bottom: 20px;
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   &__title {
