--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -4,7 +4,7 @@
     border-radius: 50%;
     width: 48px;
     height: 48px;
-    color: #fff;
+    color: #000;
     position: absolute;
     left: 50%;
     top: 50%;
