--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,7 @@
 @import "./components/location.scss";
 @import "./components/steps.scss";
 @import "./components/home_cards.scss";
-@import "./components/menu.scss";
+@import "./components/enter.scss";
 @import "./components/heart.scss";
 @import "./components/check.scss";
 @import "./components/btn.scss";
