--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,19 @@ h2 {
     font-size: 16px;
   }
 }
+@media screen and (min-width: 1440px) {
+  .footer h3 {
+    margin-top: 23px;
+  }
+  .footer nav {
+    margin-top: 23px;
+    gap: 15px;
+    margin-right: 80px;
+  }
+  .footer__space {
+    margin-right: 30px;
+  }
+}
 .typography {
   background-color: #f6f6f6;
   padding: 40px 30px 70px;
@@ -227,12 +240,19 @@ h2 {
 }
 
 @media screen and (min-width: 1024px) {
+  .tuto h2 {
+    width: 85%;
+    margin: 0 auto;
+    padding-left: 0;
+  }
   .tuto__steps {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 30px;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    width: 88%;
+    margin-left: 75px;
   }
   .tuto__step {
     width: 48%;
@@ -242,6 +262,7 @@ h2 {
   .tuto h2 {
     width: 82%;
     margin: 0 auto;
+    padding-left: 0;
   }
   .tuto__steps {
     display: flex;
@@ -533,6 +554,20 @@ h2 {
     width: 100%;
     height: 360px;
     object-fit: cover;
+  }
+}
+@media screen and (max-width: 1440px) {
+  .cardimg {
+    width: 100%;
+    object-fit: cover;
+    height: 360px;
+  }
+  .cards {
+    gap: 50px;
+    width: 80%;
+  }
+  .cards .card {
+    width: 40%;
   }
 }
 .loader {
